[gd_scene load_steps=6 format=3 uid="uid://bffk84tub3365"]

[ext_resource type="Theme" uid="uid://b0doaimn3yw0i" path="res://theme/main_theme.tres" id="1_2wj75"]
[ext_resource type="Theme" uid="uid://dke80ydpw44no" path="res://theme/classes_select.tres" id="1_hwhtv"]
[ext_resource type="Script" path="res://scripts/ui/class_selection/class_option_slot.gd" id="1_modpp"]
[ext_resource type="Texture2D" uid="uid://be7j47totc1bk" path="res://texture/ui/classes_selection/396px-Garrosh_Heart_of_War.jpg" id="3_nw6pw"]
[ext_resource type="Theme" uid="uid://1femrjh18osv" path="res://theme/property_text.tres" id="4_2gdes"]

[node name="ClassesOptionSlot" type="Button"]
custom_minimum_size = Vector2(256, 464)
anchors_preset = -1
anchor_right = 0.237
anchor_bottom = 0.710667
offset_right = 0.039978
offset_bottom = 0.319885
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_hwhtv")
script = ExtResource("1_modpp")
metadata/_edit_use_anchors_ = true

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
texture = ExtResource("3_nw6pw")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ClassesName" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "BARBARIAN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="Property" type="GridContainer" parent="VBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("4_2gdes")
columns = 2

[node name="WeaponUsed" type="Label" parent="VBoxContainer/Panel/VBoxContainer/Property"]
layout_mode = 2
size_flags_horizontal = 3
text = "WeaponUsed:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WeaponUsedValue" type="Label" parent="VBoxContainer/Panel/VBoxContainer/Property"]
layout_mode = 2
size_flags_horizontal = 3
text = "carbine"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MaxHealth" type="Label" parent="VBoxContainer/Panel/VBoxContainer/Property"]
layout_mode = 2
size_flags_horizontal = 3
text = "MaxHeath:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MaxHealthValue" type="Label" parent="VBoxContainer/Panel/VBoxContainer/Property"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MaxEndurance" type="Label" parent="VBoxContainer/Panel/VBoxContainer/Property"]
layout_mode = 2
size_flags_horizontal = 3
text = "MaxEndurance:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MaxEnduranceValue" type="Label" parent="VBoxContainer/Panel/VBoxContainer/Property"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Control" parent="VBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_2wj75")

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/Panel/VBoxContainer/Description"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 1.0
offset_right = -32.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
text = "从前一个阴郁的子夜，我独自沉思，慵懒疲竭， 面对许多古怪而离奇、并早已被人遗忘的书卷； 当我开始打盹，几乎入睡，突然传来一阵轻擂， 仿佛有人在轻轻叩击——轻轻叩击我房间的门环。 “有客来也”，我轻声嘟喃，“正在叩击我的门环， 惟此而已，别无他般。” 哦，我清楚地记得那是在风凄雨冷的十二月， 每一团奄奄一息的余烬都形成阴影伏在地板。 我当时真盼望翌日——因为我已经枉费心机 想用书来消除伤悲，消除因失去丽诺尔的伤感， 因那位被天使叫作丽诺尔的少女，她美丽娇艳， 在此已抹去芳名，直至永远。 那柔软、暗淡、飒飒飘动的每一块紫色窗布 使我心中充满前所未有的恐惧，我毛骨悚然； 为平息我心儿的悸跳．我站起身反复念叨 “这是有客人想进屋，正在叩我房间的门环， 更深夜半有客人想进屋，正在叩我房间的门环， 惟此而已，别无他般。” 于是我的心变得坚强；不再犹疑，不再彷徨， “先生，”我说，“或夫人，我求你多多包涵： 刚才我正睡意昏昏，而你敲门又敲得那么轻， 你敲门又敲得那么轻，轻轻叩我房间的门环， 我差点以为没听见你。”说着我打开门扇—— 唯有黑夜，别无他般。 凝视着夜色幽幽，我站在门边惊惧良久， 疑惑中似乎梦见从前没人敢梦见的梦幻； 可那未被打破的寂静，没显示任何象征， “丽诺尔？”便是我嗫嚅念叨的惟一字眼， 我念叨“丽诺尔”，回声把这名字轻轻送还； 惟此而已，别无他般。 我转身回到房中，我的整个心烧灼般疼痛， 很快我又听到叩击声，比刚才听起来明显。 “肯定，”我说，“肯定有什么在我的窗棂； 让我瞧瞧是什么在那儿，去把那秘密发现， 让我的心先镇静一会儿，去把那秘密发现； 那不过是风，别无他般！ 然后我推开了窗户，随着翅膀的一阵猛扑， 一只神圣往昔的乌鸦庄重地走进我房间； 它既没向我致意问候，也没有片刻的停留， 而是以绅士淑女的风度栖到我房门的上面， 栖在我房门上方一尊帕拉斯半身雕像上面； 栖息在那儿，仅如此这般。 于是这只黑鸟把我悲伤的幻觉哄骗成微笑， 以它那老成持重一本正经温文尔雅的容颜， “冠毛虽被剪除，”我说，“但你显然不是懦夫， 你这幽灵般可怕的古鸦，漂泊来自夜的彼岸， 请告诉我你尊姓大名，在黑沉沉的冥府阴间！” 乌鸦答曰“永不复焉”。 听见如此直率的回答，我对这丑鸟感到惊讶， 尽管它的回答不着边际——与提问几乎无关； 因为我们不得不承认，从来没有活着的世人 曾如此有幸地看见一只鸟栖在他房门的上面， 看见鸟或兽栖在他房门上方的半身雕像上面， 而且名叫“永不复焉”。 但那只栖于肃穆的半身雕像上的乌鸦只说了 这一句话，仿佛它倾泻灵魂就用那一个字眼。 然后它便一声不吭——也不把它的羽毛拍动， 直到我几乎在喃喃自语“其他朋友早已离散， 明晨它也将离我而去，如同我的希望已消散。” 这时乌鸦说“永不复焉”。 惊异于屋里的寂静被如此恰当的回话打破， “肯定，”我说，“此话是它惟一会说的人言， 从它不幸的主人口中学来。一连串横祸飞灾 曾接踵而至，直到它主人的歌中有了这字眼， 直到他希望的挽歌中有了这个忧郁的字眼—— 永不复焉，永不复焉。” 但那只乌鸦仍然在骗我悲伤的灵魂露出微笑， 我即刻拖了张软椅到门边雕像下那乌鸦跟前； 然后坐在天鹅绒椅垫上，我开始产生联想， 浮想连着浮想，猜度这不祥的古鸟何出此言， 这只狰狞丑陋可怕不吉不祥的古鸟何出此言， 为何对我说“永不复焉”。 我坐着猜想那意思，但没对乌鸦说片语只言， 此时，它炯炯发光的眼睛已燃烧进我的心坎； 我依然坐在那儿猜度，把我的头靠得很舒服， 舒舒服服地靠着在灯光凝视下的天鹅绒椅垫， 但在这灯光凝视着的紫色的天鹅绒椅垫上面， 她还会靠么？啊，永不复焉！ 接着我觉得空气变得稠密，被无形香炉熏香， 提香炉的撒拉弗的脚步声响在有簇饰的地板。 “可怜的人，”我叹道，“是上帝派天使为你送药， 这忘忧药能终止你对失去的丽诺尔的思念； 喝吧，喝吧，忘掉你对失去的丽诺尔的思念！” 这时乌鸦说“永不复焉”。 “先知！”我说“不管是先知是魔鬼，是鸟是魔， 是不是撒旦派你，或是暴风雨抛你，来到此岸， 来到这片妖惑鬼祟但却不惧怕魔鬼的荒原—— 来到这恐怖的小屋——告诉我真话，求你可怜！ 基列有香膏吗？ 告诉我，告诉我，求你可怜！” 乌鸦说“永不复焉”。 “先知！”我说“不管是先知是魔鬼，是鸟是魔， 凭着我们都崇拜的上帝——凭着我们头顶的苍天， 请告诉这充满悲伤的灵魂。它能否在遥远的仙境 拥抱一位被天使叫作丽诺尔的少女，她纤尘不染， 拥抱一位被天使叫作丽诺尔的少女，她美丽娇艳。” 乌鸦说“永不复焉”。 “让这话做我们的告别辞，鸟或魔！”我起身吼道， “回你的暴风雨中去吧，回你黑沉沉的夜之彼岸！ 别留下你黑色的羽毛作为你灵魂撒过谎的象征！ 留给我完整的孤独！快从我门上的雕像上滚蛋！ 让你的嘴离开我的心；让你的身子离开我房间！” 乌鸦答曰“永不复焉”。 那只鸟鸦并没飞走，它仍然栖息，仍然栖息， 栖息在房门上方苍白的帕拉斯半身雕像上面； 它的眼光与正在做梦的魔鬼的眼光一模一样， 照在它身上的灯光把它的阴影投射在地板； 而我的灵魂，会从那团在地板上漂浮的阴影中 解脱么——永不复焉！"
scroll_active = false
shortcut_keys_enabled = false

[connection signal="button_down" from="." to="." method="_on_button_down"]
